United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 6941529 SharedRuntime::raw_exception_handler_for_return_address must reset thread MethodHandle flag
6941529 : SharedRuntime::raw_exception_handler_for_return_address must reset thread MethodHandle flag

Details
Type:
Bug
Submit Date:
2010-04-07
Status:
Resolved
Updated Date:
2010-09-24
Project Name:
JDK
Resolved Date:
2010-04-21
Component:
hotspot
OS:
generic
Sub-Component:
compiler
CPU:
generic
Priority:
P3
Resolution:
Fixed
Affected Versions:
hs18
Fixed Versions:
hs18

Related Reports
Backport:
Backport:
Backport:
Backport:

Sub Tasks

Description
During SPARC JSR 292 testing I hit a bug when an exception returned to the interpreter and the SP was wrong.  That happened because the is_method_handle_exception flag in thread was not reset and still true.

                                    

Comments
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot-comp/hotspot/rev/93767e6a2dfd
                                     
2010-04-08
PUBLIC COMMENTS

Additionally with this fix I'd like to rename is_method_handle_exception to is_method_handle_return since that name fits better.
                                     
2010-04-07
SUGGESTED FIX

Reset the flag on method entry.
                                     
2010-04-07



Hardware and Software, Engineered to Work Together