6941529: SharedRuntime::raw_exception_handler_for_return_address must reset thread MethodHandle flag

During testing a bug was hit when an exception returned to the interpreter and the SP was wrong.

Reviewed-by: kvn, never